AC_PREREQ(2.59)
AC_INIT(vm-ctl, 1.0)
AM_INIT_AUTOMAKE(vm-ctl, 1.0)
AC_PREFIX_DEFAULT(/usr)
PM_PKG="pacemaker"
AM_MAINTAINER_MODE

dnl Checks for Pacemaker crm-shell.
AC_PATH_PROGS(PCMK_CRM, crm)
if test "X${PCMK_CRM}" = "X"; then
	AC_MSG_ERROR(Unable to Pacemaker.)
fi

prefix_orig="$prefix"
prefix=`eval echo "$prefix"`
case $prefix in
	NONE)	prefix=/usr;;
esac
var(){
	case $1 in
		*'${'*)		res=`eval echo "$1"`;;
		*)		res="$1";;
	esac
	case "$res" in
		""|NONE)	echo "$2";;
		*)		echo "$res";;
	esac
}
dnl>
dnl> Keep copy of original (default) localstatedir
dnl>
localstatedir_orig="$localstatedir"

exec_prefix=`var "$exec_prefix" "$prefix"`
datadir=`var "$datadir" "$prefix/share"`
config_dir=`var "$config_dir" "/etc/"`

CONFIG_DIR="$config_dir"
AC_SUBST(CONFIG_DIR)
HA_DATADIR="$datadir"
AC_SUBST(HA_DATADIR)
HA_NOARCHDATAHBDIR="$HA_DATADIR/$PM_PKG"
AC_SUBST(HA_NOARCHDATAHBDIR)
AC_PROG_LN_S

AC_OUTPUT([
Makefile
])
